--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@ justify-content: center;
 	letter-spacing: 0.1em;
 }
 
+.item img{
+	text-align: center;
+	margin: 0 auto 0;
+}
+
 .item-product {
 	text-align: center;
 	font-size: 18px;
@@ -105,9 +110,11 @@ justify-content: center;
 	padding-top: 23px;
 }
 
-.features h2 {
+.features h2,
+.decoration h2 {
 	text-align: center;
 	font-size: 36px;
+	line-height: 43px;
 }
 
 .features h3 {
@@ -115,7 +122,8 @@ justify-content: center;
 	font-size: 24px;
 }
 
-.features p {
+.features p,
+.decoration p {
 	font-size: 18px;
 	line-height: 25px;
 	letter-spacing: 0.1em;
@@ -132,6 +140,100 @@ justify-content: center;
 		align-items: center;
 }
 
+.position {
+	width: 260px;
+
+}
+
+.img-feature {
+	display: block;
+	margin-top: 5%;
+}
+
+.decor {
+	margin: 67px auto 52px;
+}
+
+.decoration h2 {
+	text-align: left;
+	font-size: 36px;
+	line-height: 43px;
+}
+
+.decoration {
+width: 45%;
+}
+
+.decoration button {
+margin-left: 150px;
+}
+
+.order {
+	width: 180px;
+	height: 50px;
+	border-radius: 25px;
+	background-color: #018b81;
+	color: #ffffff;
+	font-size: 18px;
+	line-height: 22px;
+	border: none;
+}
+
+.customer-info {
+	text-align: center;
+		margin: 0 auto 0;
+	padding: 0 auto 0;
+}
+
+.customer-info img {
+	text-align: center;
+	margin: 0 auto 0;
+}
+
+.customer h2 {
+	text-align: center;
+	margin: 0 auto;
+	font-size: 36px;
+	line-height: 43px;
+	margin-bottom: 38px;
+}
+
+.customer {
+	margin-bottom: 150px;
+}
+
+.customer-text p {
+	font-size: 18px;
+	line-height: 25px;
+	letter-spacing: 0.1em;
+	text-align: left;
+}
+
+.customer-text {
+	margin: 0 auto 0;
+	max-width: 280px;
+}
+
+footer {
+	background-color: #272727;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: #EDEDED ;
+	font-size: 18px;
+	line-height: 22px;
+	letter-spacing: 0.1em;
+	height: 100px;d
+}
+
+.copyright {
+	margin-left: 37px;
+}
+
+.contacts {
+	margin-right: 37px;
+	text-align: center;
+}
 
 
 
