--- a/css/style.css
+++ b/css/style.css
@@ -99,11 +99,13 @@ justify-content: center;
 }
 
 .item-product {
+	color: #000000;
 	text-align: center;
 	font-size: 18px;
 	letter-spacing: 0.1em;
-	margin-top: 15px;
-	margin-bottom: 19px;
+/*	margin-top: 15px;
+	margin-bottom: 19px;*/
+	margin: 15px auto 19px;
 }
 
 .features {
@@ -214,7 +216,8 @@ margin-left: 150px;
 	max-width: 280px;
 }
 
-footer {
+footer,
+.modal-footer {
 	background-color: #272727;
 	display: flex;
 	justify-content: space-between;
@@ -235,5 +238,265 @@ footer {
 	text-align: center;
 }
 
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+
+.btn:hover,
+.btn:focus,
+.btn:active,
+
+.btn-lg:hover,
+.btn-lg:focus,
+.btn-lg:active,
+
+.button:hover,
+.button:focus,
+.button:active,
+
+.bd-example:hover,
+.bd-example:focus,
+.bd-example:active,
+
+.bd-example-padded-bottom:hover,
+.bd-example-padded-bottom:focus,
+.bd-example-padded-bottom:active
+{
+	background-color: #ffffff;
+	opacity: 0.75;
+	border: none;
+}
 
 
+.btn-primary {
+	background-color: #ffffff;
+	border: none;
+	padding: 0 auto 0;
+	margin: 0 auto 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.bd-example {
+	padding: 0 auto 0;
+	margin: 0 auto 0;
+}
+
+.bd-example-padded-bottom {
+	padding: 0 auto 0;
+	margin: 0 auto 0;
+}
+
+.modal-content,
+.modal-dialog {
+	width: 90%;
+}
+
+
+
+.active,
+.carousel-inner {
+	width: 570px;
+	height: 570px;
+		margin: auto auto;
+}
+
+.carousel,
+.card-item{
+	margin: auto auto;
+}
+
+.card-item {
+	width: 700px;
+	height: 570px;
+	margin: 0 auto;
+}
+
+.decoration {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+.card-item h3 {
+	font-size: 24px;
+	letter-spacing: 0.1em;
+	color: #000000;
+}
+
+.box-gift {
+	font-size: 14px;
+		letter-spacing: 0.1em;
+	color: #000000;
+}
+
+.old-price,
+.new-price {
+	margin: 20px auto 20px;
+}
+
+.delivery-text,
+.description-delivery {
+	font-size: 18px;
+	letter-spacing: 0.1em;
+	width: 50%;
+}
+
+.micro {
+	font-size: 13px;
+	line-height: 18px;
+	letter-spacing: 0.1em;
+	color: #827C7C;
+	margin-top: 5px;
+}
+
+.order {
+	margin-top: 58px;
+	margin-left: 400px;
+
+}
+
+.image-decoration {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.box-color {
+	border: none;
+	background-color: none;
+	box-shadow: none;
+	margin-bottom: 27px;
+	margin-left: 50px;
+}
+
+.flower-language,
+.grey {
+	font-size: 18px;
+	line-height: 20px;
+	letter-spacing: 0.1em;
+}
+
+.grey {
+	color: #827C7C;
+}
+
+
+
+//Модальное окно заказа
+
+/*feedback*/
+.popup_bg{
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #211722;
+    z-index: 2000;
+    display: none;
+    cursor: pointer;
+    opacity: 0.75;
+}
+
+.popup_window{
+    width: 545px;
+    padding: 6px;
+    background: #D7D7D7;
+    
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    left:50%;
+    top: 20px;
+    margin-left: -280px;
+    position: absolute;
+    z-index: 2001;
+    display: none;
+}
+
+.popup_window__title{
+    height: 47px;
+    padding-top: 30px;
+    text-align: center;
+    color: #010506;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+}
+
+.popup_window__content{
+	/*
+    border: 4px solid #f6f6f6;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    padding: 20px;
+    background: #ffffff;
+    */
+    text-align: center;
+}
+
+.popup_window__input{
+	/*
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    width: 100%;
+    height: 29px;
+    border:1px solid #000;
+    padding: 5px;
+    */
+    border: 1px solid #CACACA;
+	width: 396px;
+	height: 48px;
+	color: #8C8C8C;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 21px;
+	font-weight: 400;
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+.popup_window__input.valid_field,
+.static_window__input.valid_field{
+
+}
+
+.error_field{
+    border-color: #ff0000 !important;
+}
+div.error{
+    display: none;
+    height: 16px;
+    margin-top: -8px;
+    margin-bottom: -8px;
+    margin-left: 10px;
+    color: red;
+}
+
+.btn_submit_form {
+	color: #010506;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 21px;
+	font-weight: 700;
+	display: block;
+	background: url(img/popup-btn-unfocus.png) no-repeat 0 0;
+	width: 275px;
+	height: 59px;
+	text-decoration: none;
+	text-align: center;
+	margin: 10px auto;
+	border: 0;
+	padding-bottom: 6px;
+}
+
+
+.btn_submit_form:hover {
+	background: url(img/popup-btn-focus.png) no-repeat 0 0;
+}
+.btn_submit_form:active {
+	background: url(img/popup-btn-unfocus.png) no-repeat 0 0;
+}
+
+
+/*end feedback*/
