--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,6 @@ justify-content: center;
 	text-align: center;
 	font-size: 18px;
 	letter-spacing: 0.1em;
-/*	margin-top: 15px;
-	margin-bottom: 19px;*/
 	margin: 15px auto 19px;
 }
 
@@ -131,7 +129,6 @@ justify-content: center;
 	letter-spacing: 0.1em;
 }
 
-
 .feature-1,
 .feature-2,
 .feature-3,
@@ -144,7 +141,6 @@ justify-content: center;
 
 .position {
 	width: 260px;
-
 }
 
 .img-feature {
@@ -157,13 +153,14 @@ justify-content: center;
 }
 
 .decoration h2 {
-	text-align: left;
+	text-align: center;
 	font-size: 36px;
 	line-height: 43px;
 }
 
 .decoration {
-width: 45%;
+	text-align: center;
+
 }
 
 .decoration button {
@@ -171,6 +168,7 @@ margin-left: 150px;
 }
 
 .order {
+	margin: 10px 10px;
 	width: 180px;
 	height: 50px;
 	border-radius: 25px;
@@ -190,6 +188,7 @@ margin-left: 150px;
 .customer-info img {
 	text-align: center;
 	margin: 0 auto 0;
+	max-width: 64px;
 }
 
 .customer h2 {
@@ -226,15 +225,15 @@ footer,
 	font-size: 18px;
 	line-height: 22px;
 	letter-spacing: 0.1em;
-	height: 100px;d
+	height: 100px;
 }
 
 .copyright {
-	margin-left: 37px;
+	text-align: center;
 }
 
 .contacts {
-	margin-right: 37px;
+	font-size: 15px;
 	text-align: center;
 }
 
@@ -293,13 +292,11 @@ footer,
 	width: 90%;
 }
 
-
-
 .active,
 .carousel-inner {
-	width: 570px;
-	height: 570px;
-		margin: auto auto;
+	width: 90%;
+	height: 90%;
+	margin: auto auto;
 }
 
 .carousel,
@@ -308,15 +305,13 @@ footer,
 }
 
 .card-item {
-	width: 700px;
-	height: 570px;
+	width: 90%;
+	height: 400px;
 	margin: 0 auto;
 }
 
-.decoration {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+.item-active {
+	width: 400px;
 }
 
 .card-item h3 {
@@ -327,7 +322,7 @@ footer,
 
 .box-gift {
 	font-size: 14px;
-		letter-spacing: 0.1em;
+	letter-spacing: 0.1em;
 	color: #000000;
 }
 
@@ -340,7 +335,7 @@ footer,
 .description-delivery {
 	font-size: 18px;
 	letter-spacing: 0.1em;
-	width: 50%;
+	width: 90%;
 }
 
 .micro {
@@ -349,26 +344,31 @@ footer,
 	letter-spacing: 0.1em;
 	color: #827C7C;
 	margin-top: 5px;
+	width: 90%;
 }
 
 .order {
 	margin-top: 58px;
 	margin-left: 400px;
-
 }
 
-.image-decoration {
+ .image-decoration {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-}
+	justify-content: flex-start;
+	margin: 0 auto 0;
+} 
 
 .box-color {
 	border: none;
 	background-color: none;
 	box-shadow: none;
-	margin-bottom: 27px;
-	margin-left: 50px;
+	margin: 27px 0 27px;
+	max-width: 110px;
+}
+
+.item-active img {
+	max-width: 45%;
 }
 
 .flower-language,
@@ -382,12 +382,62 @@ footer,
 	color: #827C7C;
 }
 
-
-
-//Модальное окно заказа
-.modal-body,
-.modal-content {
-	width: 50%;
-	height: 50%;
+/*//Модальное окно заказа//*/
+#orderform {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	width: 70%;
+	height: 70%;
 	border-radius: none;
+	padding: 20px 50px 30px;
+	font-size: 18px;
+	line-height: 22px;
+}
+
+#orderform input {
+	width: 300px;
+	height: 30px;
+	font-size: 18px;
+}
+
+.button-order,
+#submit {
+	background-color: #018b81;
+	color: #ffffff;
+	border-radius: 
+	width: 120px;
+	height: 36px;
+	border-radius: 18px;
+	font-size: 18px;
+	line-height: 22px;
+}
+
+.button-order:hover,
+.button-order:active,
+.order:hover,
+.order:active {
+	background-color: #827c7c;
+}
+
+.delivery {
+	padding: 10px auto 10px;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+
+}
+
+.delivery-button {
+	margin: 150px auto 50px;
+}
+
+input:hover,
+input:active {
+	border-color: #018b81;
+}
+
+.img-feature {
+	max-width: 60px;
+	max-height: 60px;
 }
